Fixed height of scrollbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,7 @@
 
 .news {
   overflow-y: scroll;
-  height: 486px;
+  height: 402px;
   width: inherit;
   padding: 15px 20px;
 }
